[tool.poetry]
name = "dsd"
version = "0.1.0"
description = ""
authors = ["Ettore Candeloro"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
opencv-contrib-python = "^4.10.0.82"
mediapipe = "^0.10.14"
numpy = "^1.0.0"


[tool.poetry.group.dev.dependencies]
black = "^24.4.2"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
